--- a/site/index.html
+++ b/site/index.html
@@ -53,7 +53,7 @@
     <title>Schoology</title>
 </head>
 <body>
-    <div class="title">jackson likes taylor dean</div>
+    <div class="title">Loki is weird also stop gatekeeping the site u dont own it lil bro</div>
     <center>
         <form id="consoleForm">
             <input id="consoleInput" placeholder="Enter URL to browse">
