--- a/site/index.html
+++ b/site/index.html
@@ -1,78 +1,87 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Courier New', monospace;
-            background-color: black;
-            color: white;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-
-        .console {
-            position: absolute;
-            width: 100%;
-            bottom: 0;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-        input {
-            background-color: transparent;
-            border: none;
-            outline: none;
-            color: white;
-            font-size: 16px;
-            width: calc(100% - 20px);
-        }
-
-        .title {
-            text-align: center;
-            font-size: 24px;
-            margin-top: 20px;
-        }
-
-        .msg {
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        .credits {
-            color: gray;
-        }
-
-        .info {
-            color: lightblue;
-        }
-    </style>
-    <title>Schoology</title>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Schoology</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #1a1a1a;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    .title {
+      font-size: 36px;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    #consoleForm {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    #consoleInput {
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      width: 300px;
+      font-size: 16px;
+    }
+    #consoleInput::placeholder {
+      color: #ccc;
+    }
+    #consoleInput:focus {
+      outline: none;
+      border-color: #4CAF50;
+    }
+    #submitBtn {
+      background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 20px;
+      margin-left: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    #submitBtn:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
     <div class="title">Loki is weird also stop gatekeeping the site u dont own it lil bro</div>
-    <center>
-        <form id="consoleForm">
-            <input id="consoleInput" placeholder="Enter URL to browse">
-        </form>
-     
-    </center>
-    <script src="uv/uv.bundle.js" defer=""></script>
-    <script src="uv/uv.config.js" defer=""></script>
-    <script src="index.js" defer=""></script>
-    <div class="console" id="consoleOutput"></div>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const form = document.getElementById('consoleForm');
-            const input = document.getElementById('consoleInput');
+    <form id="consoleForm">
+      <input id="consoleInput" type="text" placeholder="Enter URL to browse">
+      <button id="submitBtn" type="submit">Go</button>
+    </form>
+  </div>
 
-            form.addEventListener('submit', (event) => {
-                event.preventDefault();
-                const url = input.value.trim();
-                if (url !== '') window.location.href = url;
-            });
-        });
-    </script>
+  <!-- JavaScript for Form Submission -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const form = document.getElementById('consoleForm');
+      const input = document.getElementById('consoleInput');
+
+      form.addEventListener('submit', (event) => {
+        event.preventDefault();
+        const url = input.value.trim();
+        if (url !== '') window.location.href = 'https://' + url;
+      });
+    });
+  </script>
+</body>
+</html>
+
