--- a/site/index.html
+++ b/site/index.html
@@ -50,23 +50,23 @@
 <body>
   <div class="container">
     <div class="title">Loki is weird also stop gatekeeping the site u dont own it lil bro</div>
-    <form id="consoleForm">
-      <input id="consoleInput" type="text" placeholder="Enter URL to browse">
-    </form>
+        <form id="consoleForm">
+            <input id="consoleInput" placeholder="Enter URL to browse">
+        </form>
   </div>
 
   <!-- JavaScript for Form Submission -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const form = document.getElementById('consoleForm');
-      const input = document.getElementById('consoleInput');
+ <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const form = document.getElementById('consoleForm');
+            const input = document.getElementById('consoleInput');
 
-      form.addEventListener('submit', (event) => {
-        event.preventDefault();
-        const url = input.value.trim();
-        if (url !== '') window.location.href = 'https://' + url;
-      });
-    });
-  </script>
+            form.addEventListener('submit', (event) => {
+                event.preventDefault();
+                const url = input.value.trim();
+                if (url !== '') window.location.href = url;
+            });
+        });
+    </script>
 </body>
 </html>
